update social links and add platform-specific hover effects

--- a/themes/linkstree/hugo.toml
+++ b/themes/linkstree/hugo.toml
@@ -23,9 +23,12 @@ title = 'My New Hugo Site'
        { url='https://x.com/FuenRob', icon='fab fa-x-twitter' }
     ]
     links = [
-      { name='GitHub', url='https://github.com/FuenRob', description='Aquí puedes encontrar mis proyectos', icon='fab fa-github' },
-      { name='LinkedIn', url='https://www.linkedin.com/in/robercmorais/', icon='fab fa-linkedin' },
-      { name='Twitter', url='https://x.com/FuenRob', icon='fab fa-x-twitter' }
+      { name='Mi canal de YouTube', url='https://www.youtube.com/@FuenRob', description='Tutoriales de programación y desarrollo de software', icon='fab fa-youtube', platform='YouTube' },
+      { name='Mi código', url='https://github.com/FuenRob', description='Aquí puedes encontrar mis proyectos', icon='fab fa-github', platform='GitHub'},
+      { name='Mi carrera profesional', url='https://www.linkedin.com/in/robercmorais/', icon='fab fa-linkedin', platform='LinkedIn' },
+      { name='Sígueme en X', url='https://x.com/FuenRob', icon='fab fa-x-twitter', platform='X' },
+      { name='Sígueme en Instagram', url='https://www.instagram.com/fuenrob/', icon='fab fa-instagram', platform='Instagram' },
+      { name='Sígueme en TikTok', url='https://www.tiktok.com/@fuenrob', icon='fab fa-tiktok', platform='TikTok' }
     ]
 
 [module]
