update baseURL in configuration for deployment to GitHub Pages

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://fuenrob.github.io/'
 languageCode = 'es-es'
 title = 'Roberto Morais'
 theme = 'linkstree'
